{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Camera",
            "id": "b1b20ee8-f9a0-49af-baf5-29fcc93df2aa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e498c525-b7d5-4b63-8c52-94bc5de196b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "8d13588c-273f-4cc2-998d-4d88b56faf9b",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f058632b-3129-4eb2-b926-cc7a4f23ba15",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "aaf717af-2c09-4059-9a27-edf1fb960572",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec3c19cc-0d4d-45b8-b0fc-86656c0c61c1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "16860cea-5dfa-48ce-b68c-2febd2a27900",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "047a1a90-6b09-4e42-b105-22281e1db654",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e1c4dcce-08b9-4130-b51c-bb764bf2fc23",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GridInteraction",
            "id": "0a111a09-d00e-4cf2-94db-ea00e64ff8c7",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "dc4d2950-cd81-4835-bb62-058a5117a799",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "0baa9b4b-7486-4ead-ba67-6eecd0d216d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "795d13d9-09fd-45a7-b79c-9d1282f8f442",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75e8958b-afb5-48a7-8c81-5c385f62e5c5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}